TSC improved db connection fixed

--- a/core/package.json
+++ b/core/package.json
@@ -4,10 +4,10 @@
   "description": "Core backend for anticafe",
   "main": "dist/index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha -r ts-node/register src/**/*.spec.ts",
+    "test": "NODE_ENV=test mocha --timeout 10000 -r ts-node/register src/**/*.spec.ts",
     "start:prod": "node dist",
     "start": "nodemon dist",
-    "prestart": "tsc -p tsconfig.json"
+    "prestart": "tsc -p tsconfig.json && ts-node readall.ts"
   },
   "author": "Onebytecode",
   "license": "MIT",
@@ -25,6 +25,6 @@
   },
   "dependencies": {
     "express": "^4.16.0",
-    "mongoose": "^4.11.13"
+    "mongoose": "^4.10.8"
   }
 }
