--- a/core/package.json
+++ b/core/package.json
@@ -4,7 +4,7 @@
   "description": "Core backend for anticafe",
   "main": "dist/index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha --timeout 10000 -r ts-node/register src/**/*.spec.ts",
+    "test": "NODE_ENV=test mocha --timeout 10000 -r ts-node/register src/main.spec.ts",
     "start:prod": "node dist",
     "start": "nodemon dist",
     "prestart": "tsc -p tsconfig.json && ts-node readall.ts"
@@ -18,6 +18,7 @@
     "chai": "^4.1.2",
     "colors": "^1.1.2",
     "mocha": "^3.5.3",
+    "mongo-interlude": "^0.1.1",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "ts-node": "^3.3.0",
