--- a/core/package.json
+++ b/core/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "express": "^4.16.0",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.11.6",
     "mongoose": "^4.10.8"
   }
 }
