--- a/core/package.json
+++ b/core/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.0",
     "express-graphql": "^0.6.11",
     "graphql": "^0.11.6",
-    "mongoose": "^4.10.8"
+    "mongoose": "^4.10.8",
+    "rxjs": "^5.4.3"
   }
 }
