--- a/core/package.json
+++ b/core/package.json
@@ -22,6 +22,7 @@
     "mongo-interlude": "^0.1.1",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
+    "request": "^2.83.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.5.3"
   },
