--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ node_js:
 services: 
   - "mongodb"
 script: 
-  - "cd ./core && npm test"
+  - "cd ./core && npm install"
+  - "npm test"
 after_success:
   - "npm run-script docker-hook"
