--- a/core/package.json
+++ b/core/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha --timeout 10000 -r ts-node/register src/main.spec.ts",
+    "test:win": "set NODE_ENV=test && mocha --timeout 10000 -r ts-node/register src/main.spec.ts",
+    "test:win:helpers": "set NODE_ENV=test && mocha --timeout 10000 -r ts-node/register src/helpers/helpers.spec.ts",
     "start:prod": "NODE_ENV=production node dist",
     "start": "nodemon dist",
     "prestart": "tsc -p tsconfig.json && ts-node readall.ts",
